quorum/test/tests/other/Pass/ConstantObjectsInConstructor.quorum
/*
Expected output:
7
false
*/

use Libraries.System.DateTime
use Libraries.Compute.Math

class Main
    on create
        constant DateTime dateTime
        constant Math math

        output math:AbsoluteValue(-7)
        output dateTime:GetEpochTime() <= 0
    end

    action Main
    end
end