quorum/test/tests/other/Fail/ReassignClassConstantWithMethod.quorum
/*
Expected output: should not compile
*/

use Libraries.System.File
use Libraries.Compute.Random
use Libraries.Compute.Math

class Main
    constant number seven = 7
    constant text z = "101"
    private constant Random r
    constant File f

    action Main
        AttemptToReassign(me)
    end

    action AttemptToReassign(Main main)
        main:seven = 9
        main:z = "808"
        main:r = undefined

        File f2
        main:f = f2
    end
end